fix bg-dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ li:hover:not(.active) {
 } */
 .dark .right {
     background-image: url('../img/bgDark.jpg');
-    background-size: 80%;
+    background-size: contain;
 }
 .dark .form-control{
     background-color: rgb(71, 71, 71);
